crates/ladder_types/tests/ui/generated/should_pass/test__kiss_ladder__R0_plus_R1.rs

use ladder_types::kiss_ladder::*;

fn main() {
   let _ = R0::new() + R1::new();
}
